...

            <android.support.v7.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                        android:layout_marginRight="8dp"
                        android:text="12/12/00 12:00PM"
                        app:layout_constraintEnd_toStartOf="@+id/admin_reportdetails_alt_status"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
...

                    <android.support.v7.widget.CardView
                        android:id="@+id/admin_reportdetails_button_viewlog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                            <android.support.v7.widget.CardView
                                android:id="@+id/cardviewOpen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <android.support.v7.widget.CardView
                                android:id="@+id/cardviewClosed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <android.support.v7.widget.CardView
                                android:id="@+id/cardviewResolved"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/admin_reportdetails_button_editcategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <LinearLayout
                            android:id="@+id/admin_reportdetails_container_categories"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
...

                        <LinearLayout
                            android:id="@+id/admin_reportdetails_container_tags"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/admin_reportdetails_button_edittags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/admin_reportdetails_notes_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/admin_reportdetails_notes_rv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
...

                    <android.support.v7.widget.CardView
                        android:id="@+id/admin_reportdetails_button_addnotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
