...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_card"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/OffWhiteBackground"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addremove_input"
                    style="@style/_EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
...
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/addremove_button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/addremove_input"
                    app:layout_constraintStart_toEndOf="@+id/addremove_input"
...
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close_black_24dp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/addremove_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
...
            android:layout_weight="1"
            android:minHeight="100dp"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <android.support.v7.widget.CardView
            android:id="@+id/addremove_button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
...
