...
    tools:targetApi="lollipop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_glowthing">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/OffWhiteBackground"
...
                android:background="@drawable/gradient_div"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView39" />

            <EditText
                android:id="@+id/adminlogin_input_email"
                style="@style/_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="5dp"
...
                android:layout_marginTop="16dp"
                android:text="Password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminlogin_input_email" />

            <EditText
                android:id="@+id/adminlogin_input_password"
                style="@style/_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <android.support.v7.widget.CardView
                android:id="@+id/adminlogin_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
...
